# test_cmakefile

./: .gitignore  CMakeLists.txt  README.md  tutorial.c
MathFunctions/: CMakeLists.txt  MathFunctions.h  mylog.c  mysqrt.c
src/: CMakeLists.txt  tutorial.c
